--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -12,7 +12,9 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;500&family=Quicksand:wght@400&display=swap"
     rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,300&family=Playfair+Display&display=swap" rel="stylesheet">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <title>React App</title>
