--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -17,7 +17,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,300&family=Playfair+Display&display=swap" rel="stylesheet">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>React App</title>
 </head>
 
 <body>
@@ -35,5 +34,7 @@
     -->
 </body>
 <script src="https://kit.fontawesome.com/6ae0f814b3.js" crossorigin="anonymous"></script>
-
+<script type="module">
+  import Swiper from 'https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.esm.browser.min.js'
+</script>
 </html>
